--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 /* Font */
 @import url('https://fonts.cdnfonts.com/css/segoe-ui-4');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 body {
   margin: 0;
